project part 2--adding servive page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <img src="img/atlanta.jpg" class="tour-img" alt="tour-image">
                 <div class="tour-body">
                     <h3 class="tour-name">Atlanta</h3>
-                    <p class="tour-action">View city</p>
+                    <p class="tour-action"><a href="https://www.ajc.com/entertainment/sky-high-places-capture-breathtaking-views-atlanta/Dfzxo8WgqKmzE3jYhqeByO/">View city</a></p>
                 </div>
             </div>
 
@@ -90,7 +90,7 @@
                 <img src="img/NYCITY.jpg" class="tour-img" alt="tour-image">
                 <div class="tour-body">
                     <h3 class="tour-name">New York</h3>
-                    <p class="tour-action">View city</p>
+                    <p class="tour-action"><a href="https://www.timeout.com/newyork/things-to-do/best-views-in-nyc">View city</a></p>
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                 <img src="img/colorado2.jpg" class="tour-img" alt="tour-image">
                 <div class="tour-body">
                     <h3 class="tour-name">Colorado</h3>
-                    <p class="tour-action">View city</p>
+                    <p class="tour-action"><a href="https://tocc.us/">View city</a></p>
                 </div>
             </div>
 
@@ -106,7 +106,7 @@
                 <img src="img/beach.jpg" class="tour-img" alt="tour-image">
                 <div class="tour-body">
                     <h3 class="tour-name">Miami</h3>
-                    <p class="tour-action">View city</p>
+                    <p class="tour-action"><a href="https://www.miamiandbeaches.com/things-to-do/attractions/most-beautiful-places-in-miami">View city</a></p>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                 <img src="img/hawaii.png" class="tour-img" alt="tour-image">
                 <div class="tour-body">
                     <h3 class="tour-name">Hawaii</h3>
-                    <p class="tour-action">View city</p>
+                    <p class="tour-action"><a href="https://www.lonelyplanet.com/articles/top-20-hawaiian-vistas">View city</a></p>
                 </div>
             </div>
 
@@ -122,19 +122,40 @@
                 <img src="img/ari2.jpg" class="tour-img" alt="tour-image">
                 <div class="tour-body">
                     <h3 class="tour-name">Arizona</h3>
-                    <p class="tour-action">View city</p>
+                    <p class="tour-action"><a href="https://grandcanyonwest.com/?gad_source=1&gclid=CjwKCAiA0syqBhBxEiwAeNx9N8oz2q7eVT4_kTdE3kVlvXxce5d4FG11hp-JQjbhvpJRHsJcTNk8whoC0fIQAvD_BwE">View city</a></p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- services -->
-    <hr class="custom-hr">
     <section class="services-section" id="services">
- 
-    <h1>service page in process</h1>
-    </section>
-    <hr class="custom-hr">
+        <h1 class="section-title" data-aos="fade-up">Why Us ?</h1>
+        <p class="section-para" data-aos="fade-up">We provide the safest abd best experience for all clients. </p>
+
+        <!-- services grid -->
+        <div class="serives-grid">
+            <div class="service-card" data-aos="fade-up">
+                <div class="circle"></div>
+                <i class="fa-solid fa-earth-americas card-icon"></i>
+                <p class="service-text">Travel Documentation</p>
+            </div>
+            <div class="service-card" data-aos="fade-up">
+                <div class="circle"></div>
+                <i class="fa-solid fa-coins card-icon"></i>
+                <p class="service-text">Passenger Assistance</p>
+            </div>
+            <div class="service-card" data-aos="fade-up">
+                <div class="circle"></div>
+                <i class="fa-solid fa-book-open card-icon"></i>
+                <p class="service-text">Consulting</p>
+            </div>
+            <div class="service-card" data-aos="fade-up">
+                <div class="circle"></div>
+                <i class="fa-solid fa-person-snowboarding card-icon"></i>
+                <p class="service-text">Travel Management</p>
+            </div>
+        </div>
     <!-- contact section -->
     <section class="book-section" id="booknow">
         <div class="book-content" data-aos="fade-up">
@@ -145,6 +166,11 @@
         </div>
         <div class="bg-circle-2"></div>
         <img src="img/book.png" data-aos="fade-up" class="book-now-img" alt="">
+
+        
+  
+    
+  
     </section>
 
     <!-- footer -->
